# cardano-flutter-sdk

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  flutter_rust_bridge.yaml
.claude/: COORDINATOR_GUIDE.md  launch.json
.claude/goals/: CRITICAL_REVIEW.md  GOAL_COMMAND.md  INDEPENDENT_PROJECT_STRATEGY.md  OPEN_SOURCE_STRATEGY.md  PHASES_WITH_VERIFICATION.md  phase-0.md  phase-1.md  phase-2.md
.claude/tasks/: dart-bindings-agent.md  example-docs-agent.md  phase-0-foundation.md  phase-2-blockfrost-provider-agent.md  phase-2-coin-selection-agent.md  phase-2-example-docs-agent.md  phase-2-research-agent.md  phase-2-rust-txbuilder-agent.md  phase-2-signing-agent.md  phase-2-test-verification-agent.md  research-agent.md  rust-scaffolding-agent.md  test-automation-agent.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
dart/: .pubignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
dart/android/: build.gradle  gradle.properties
dart/ios/: cardano_flutter_rs.podspec  copy_dylib.sh
dart/lib/: cardano_flutter_rs.dart  cardano_flutter_rs_web.dart
dart/macos/: build_macos_framework.sh  cardano_flutter_rs.podspec
dart/test/: cip30_test.dart  cip45_test.dart  conformance_test.dart  cross_wallet_verify_test.dart  hardware_test.dart  hd_wallet_test.dart  metadata_test.dart  minting_test.dart  plutus_test.dart  seed_encryption_test.dart  widget_test.dart
dart/web/: conformance_harness.dart  web_wallet_harness.dart
docs/: PHASE_1_VERIFICATION.md  PHASE_2_VERIFICATION.md  PHASE_3_VERIFICATION.md  PLAN.md  RC_0_12_0_RELEASE_VERIFICATION.md  android-verification.md  cip45-testing.md  cip45-transport.md  cross-wallet-verify.md  hardware-wallets.md  macos-packaging.md  pallas-feasibility.md  project-plan.md  security-review-phase7.md  seed-encryption.md  web-backend.md
docs/research/: phase-2-csl-tx-builder.md
example/: README.md  pubspec.yaml
example/android/: build.gradle  settings.gradle
example/integration_test/: bugfix_verification_test.dart  live_mint_test.dart  macos_packaging_test.dart  perf_benchmark_test.dart  seed_vault_test.dart  send_flow_test.dart
example/ios/: Podfile
example/lib/: accounts_screen.dart  cip30_screen.dart  cip45_screen.dart  cip45_transport.dart  cip45_webrtc_transport.dart  dev_config.dart  ledger_hardware_wallet.dart  ledger_screen.dart  main.dart  main_web.dart  message_screen.dart  mint_screen.dart  qr_scanner_page.dart  seed_vault_screen.dart  send_screen.dart  stake_screen.dart  web_cip30_screen.dart
example/test/: widget_test.dart
example/web/: index.html  manifest.json
rust/: Cargo.toml  build.rs
rust/src/: address.rs  cip30.rs  coin_selection.rs  error.rs  frb_generated.rs  hardware.rs  lib.rs  message.rs  metadata.rs  minting.rs  plutus.rs  seed.rs  sign.rs  staking.rs  tx.rs  tx_tests.rs  wallet.rs
tool/android/: build_android_jni.sh
tool/cml_conformance_spike/: README.md  harness.mjs  package.json
tool/web_conformance/: README.md  build.mjs  index.html  package.json  run-headless-wallet.mjs  run-headless.mjs  serve.mjs  wallet_index.html
(+72 files in other folders)
