[package]
name = "cardano_flutter_rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust FFI wrapper around cardano-multiplatform-lib for the cardano_flutter_rs Dart package."
repository = "https://github.com/YOUR_HANDLE/cardano-flutter-sdk"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Verify latest versions at install time — these are starting points
cardano-serialization-lib = "15.0"
flutter_rust_bridge = "=2.12.0"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
bip39 = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"], optional = true }
blake2 = "0.10"
digest = "0.10"

[features]
default = []
network = ["tokio"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "test-util"] }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(frb_expand)'] }
