[package]
name = "cardano_flutter_rs"
version = "0.9.0"
edition = "2021"
license = "MIT"
description = "Rust FFI wrapper around cardano-serialization-lib (CSL) for the cardano_flutter_rs Dart package."
repository = "https://github.com/pawsitivegames/cardano-flutter-sdk"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Verify latest versions at install time — these are starting points
cardano-serialization-lib = "15.0"
# Emurgo's reference COSE/CIP-8 lib (the exact one Lace/Eternl use via WASM).
# Used so CIP-30 signData output is interop-correct by construction.
cardano-message-signing = "1.0"
flutter_rust_bridge = "=2.12.0"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
bip39 = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
tokio = { version = "1", features = ["rt", "macros"], optional = true }
blake2 = "0.10"
digest = "0.10"
# Phase 5b — at-rest seed encryption (Argon2id KDF + XChaCha20-Poly1305 AEAD).
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[features]
default = []
network = ["tokio"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "test-util"] }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(frb_expand)'] }
